--- a/jdyfront/src/jobReport/index.html
+++ b/jdyfront/src/jobReport/index.html
@@ -32,6 +32,7 @@ html, body{
 <body>
   <div id="app" class = "wrap">
       <two-col
+          style="background-color:#0a2c66"
           :gutter="gutter"
           :cit="cit1"
           :margin="margin"
