--- a/jdyfront/src/dormitoryManagement/index.html
+++ b/jdyfront/src/dormitoryManagement/index.html
@@ -215,7 +215,7 @@ var config = {
             id: 5,
             picUrl: "tssq@3x.jpg",
             jumpUrl:"https://tqs0cvli0t.jiandaoyun.com/f/5f504bae26170c00065eff5e",
-        }:,
+        },
         {
             id: 6,
             picUrl: "wxqk@3x.jpg",
@@ -240,7 +240,8 @@ var config = {
         },
         {
             id: 10,
-            picUrl: "white@3x.png",
+            picUrl: "sdfcx@3x.png",
+            jumpUrl:"https://tqs0cvli0t.jiandaoyun.com/q/629ef607a7b815000854342b",
         },
     ],
     gutter:"20",
